# kokkos-workspace

./: .gitignore  CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build.sh
